# YAODAQ

./: .codespellignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  dependencies.cmake
.github/workflows/: Docs.yml  Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-MSVC.yml  Windows-MSYS2.yml  pre-commit.yml
apps/: CMakeLists.txt  TDC.cpp  YAODAQBoard.cpp  YAODAQClient.cpp  YAODAQController.cpp  YAODAQLogger.cpp  YAODAQModule.cpp  YAODAQServer.cpp
cmake/: CLI11.cmake  GetCMakeMM.cmake  IXWebSocket.cmake  JsonRpcCxx.cmake  MagicEnum.cmake  Nlohmann.cmake  YAODAQConfig.cmake.in  Zlib-ng.cmake  cpp-terminal.cmake  cxx-jsonrpc.cmake  doctest.cmake  fmt.cmake  simdjson.cmake  soci.cmake  spdlog.cmake
examples/: CMakeLists.txt  RPC_DCT.cpp  RPC_TDC.cpp
extra/: CMakeLists.txt
extra/yaodaq/: CMakeLists.txt
extra/yaodaq/connector/websocket/: CMakeLists.txt  Websocket.cpp  Websocket.hpp
extra/yaodaq/transport/: CMakeLists.txt  WebSocket.cpp  WebSocket.hpp
include/yaodaq/: Board.hpp  Cleaner.hpp  Client.hpp  ClientRegistry.hpp  Clock.hpp  Codec.hpp  Component.hpp  Config.hpp  ConnectionState.hpp  Connector.hpp  Controller.hpp  Defaults.hpp  Dispatcher.hpp  Exception.hpp  Export.hpp  Formatter.hpp  ICodec.hpp  ITransport.hpp  Identifier.hpp  JSONCodec.hpp  JsonRPCAsker.hpp  JsonRPCHandler.hpp  JsonRPCResponder.hpp  Log.hpp  Loggable.hpp  Logger.hpp  Logging.hpp  Message.hpp  MetaInfos.hpp  Module.hpp  Parameters.hpp  Response.hpp  Server.hpp  State.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  TransactionManager.hpp  Verbosity.hpp  Version.hpp.in  WebSocketTransport.hpp  (+1 more)
src/: CMakeLists.txt  Cleaner.cpp  Client.cpp  Component.cpp  Controller.cpp  Exception.cpp  Formatter.cpp  Identifier.cpp  JSONCodec.cpp  JsonRPCAsker.cpp  JsonRPCHandler.cpp  Log.cpp  Logging.cpp  Message.cpp  MetaInfos.cpp  Response.cpp  Server.cpp  State.cpp  WebsocketCloseConstants.cpp
src/yaodaq/: ConnectionState.cpp  Identifier.cpp  Looper.cpp
tests/: CMakeLists.txt  clock.test.cpp  http.test.cpp  message.test.cpp
web/: CMakeLists.txt  Webserver.cpp
